Generate HTML with Javascript

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 .DS_Store
 .vscode
+.doc/3-links.md
+.doc/Array-Methods.txt
+.doc/calc.html
+.doc/convert object to array of key value pairs.txt
+.doc/Find-all-occurrances-of string.txt
+.doc/findstr.txt
+.doc/html-input.txt
+.doc/javascript-reference.pdf
+.doc/object-lists.txt
