--- a/3-my-exercise-solutions/lesson-16/.vscode/launch.json
+++ b/3-my-exercise-solutions/lesson-16/.vscode/launch.json
@@ -29,7 +29,7 @@
       "request": "launch",
       "name": "Launch Chrome with debugging for automated tests",
       "port": 9222,
-      "url": "http://localhost:5500/tests-jasmine/tests.html",
+      "url": "http://localhost:5500/tests/tests.html",
       "webRoot": "${workspaceFolder}",
       "runtimeExecutable": "C:\\Program Files\\Google\\Chrome\\Application\\Chrome.exe",
       "runtimeArgs": [
