--- a/3-my-exercise-solutions/lesson-18/.vscode/launch.json
+++ b/3-my-exercise-solutions/lesson-18/.vscode/launch.json
@@ -36,6 +36,19 @@
         "--remote-debugging-port=9222",
         "--new-window"
       ]
+    },
+    {
+      "type": "chrome",
+      "request": "launch",
+      "name": "Launch Chrome with debugging for Lesson 18",
+      "port": 9222,
+      "url": "http://localhost:5500/Lesson18.html",
+      "webRoot": "${workspaceFolder}",
+      "runtimeExecutable": "C:\\Program Files\\Google\\Chrome\\Application\\Chrome.exe",
+      "runtimeArgs": [
+        "--remote-debugging-port=9222",
+        "--new-window"
+      ]
     }
   ]
 }
